--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -49,7 +50,9 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
         </dependency>
+
 
 		<!--集成druid连接池-->
 		<dependency>
@@ -71,7 +74,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<!-- <version>4.12</version> -->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
