--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/scenic_mark?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: 123456
 
 mybatis:
   mapper-locations:
