--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,13 +1,13 @@
+spring:
+  profiles:
+    include: datasource
+
 server:
   port: 8004
   tomcat:
     uri-encoding: utf-8
 
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/scenic_mark?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
+
 
 mybatis:
   mapper-locations:
